test/types/type_variables/jplevyak/where-3-error.good
where-3-error.chpl:5: error: unresolved call 'f(t=real, 1)'
where-3-error.chpl:1: note: candidates are: f(type t, x)
